# api-service-integration

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
.claude/: README.md
.claude/memory/: README.md  design-team-structure.md  team-structure.md
.claude/personas/: README.md  architectural-designer.md  backend-engineer.md  bim-engineer.md  dba.md  frontend-engineer.md  principal-architect.md  qa-specialist.md  staff-engineer.md  sustainability-specialist.md
.claude/skills/: README.md  architectural-design-process.md  architectural-geometry.md  architectural-vision-prompting.md  bim-component-thinking.md  cad-drafting-standards.md  commercial-construction.md  csi-masterformat.md  ibc-code-analysis.md  industrial-facility-design.md  mep-mechanical-hvac.md  mep-plumbing.md  pdf-vector-extraction.md  sustainability-and-energy.md  team-engineering-approach.md
.github/: dependabot.yml
.github/workflows/: ci.yml
addons/layout_annotator_cpp/: README.md
agent_docs/: 00_START_HERE.md  100_INGEST_PIPELINE.md  10_ARCHITECTURE.md  110_GEMINI_BILLING.md  120_GEOMETRY_FRAMEWORK.md  130_DRAFTING_STANDARDS.md  140_CI_PIPELINE.md  150_ENTERPRISE_PIPELINE.md  20_WORKFLOWS.md  30_ARCHICAD_INTEGRATION.md  40_CODE_TO_ARCHICAD_MAP.md  50_CONFIG_AND_SECRETS.md  60_TROUBLESHOOTING.md  70_TESTING.md  80_GLOSSARY.md  90_DECISIONS.md
assets/: README.md  manifest.json
config/: cd_set.json  csi_master_format.json  ibc_use_groups.json  ingest.json  note_templates.json  phases.json  rules.json  sheet_conventions.json
config/drafting/: aia_layers.json  drafter_persona.txt  line_types.json  scales.json  sheet_types.json
output/: SheetNotes.json
scripts/: build_knowledge_db.py  discover_commands.py  ingest_pdf.py  quick_demo.py  render_views.py  revise_plan.py  run_annotation.py
src/: __init__.py  connection.py  discovery.py
src/apply/: __init__.py  json_exporter.py  property_writer.py  schedule_exporter.py  svg_layered_export.py  svg_lossless_export.py  text_placer.py
src/components/: __init__.py  builder.py  schemas.py  svg_export.py
src/decide/: __init__.py  knowledge_enrichment.py  note_builder.py  phase_analyzer.py  rules_engine.py  scheduler.py
src/divisions/: __init__.py  base.py  registry.py
src/extract/: __init__.py  elements.py  layouts.py  properties.py  renovation.py
src/ingest/: __init__.py  accuracy_checker.py  geometry_normalizer.py  hybrid.py  pdf_classifier.py  plan_model.py  runner.py  vector_anchor.py  vector_hybrid.py  vector_parser.py  vector_truth.py  vision_parser.py
src/knowledge/: __init__.py  schema.py  (+2 more)
tests/: test_ingest.py  test_note_builder.py  test_rules_engine.py
(+43 files in other folders)
